# Jemma

./: .gitignore  00_START_HERE.md  AGP_FINDINGS_SUMMARY.txt  AGP_INSPECTION_FINAL.md  AGP_INSPECTION_REPORT.md  COLLECT_FACTS.bat  COLLECT_FACTS_V2.py  COMPLETE_FACTS_COLLECTION.bat  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.txt  EXECUTE.py  EXECUTE_THIS_FOR_FACTS.txt  EXECUTION_ANALYSIS.txt  EXECUTION_INSTRUCTIONS.md  EXECUTION_INSTRUCTIONS_README.txt  EXECUTION_READY.txt  EXECUTION_REPORT.txt  EXECUTION_SUMMARY.md  EXEC_NOW.cmd  EXEC_NOW.py  FINAL_EXEC.py  FINAL_FACTS_COLLECTOR.py  FINAL_MACHINE_FACTS_SUMMARY.txt  FINAL_NOTEBOOK_RUNNER.py  FINAL_STATUS_REPORT.txt  FINAL_WORKFLOW_EXEC.py  GATHER_MACHINE_FACTS_NOW.py  HERMES_AGENT_RESEARCH_REPORT.md  INSPECTION_INDEX.md  INSPECTION_RESULTS.txt  JAR_INSPECTOR_DELIVERY_CHECKLIST.md  JAR_INSPECTOR_INDEX.md  JAR_INSPECTOR_README.md  JAR_INSPECTOR_SUMMARY.md  JAR_INSPECTOR_VISUAL_GUIDE.md  MACHINE_FACTS_EXECUTION_GUIDE.md  MACHINE_FACTS_FINAL_SUMMARY.md  MACHINE_FACTS_INDEX.txt  MACHINE_FACTS_REPORT.md  MANIFEST.md  (+159 more)
.github/: AGENTS.md
android-app/: README.md  settings.gradle.kts
benchmarks/: run_e2b_e4b_benchmarks.py  run_embedding_benchmarks.py  run_finetune_benchmark.py  run_full_benchmarks.py  run_rag_benchmarks.py  run_unsloth_benchmarks.py
configs/: benchmark-defaults.toml  default.toml  embedding-training.toml  lan.toml  models.toml  secrets.example.toml
datasets/: construction-cracks-train.jsonl  graphrag.db
demos/: demo_audio.py  demo_function_calling.py  demo_image.py  demo_text.py  demo_video.py  e4b_loader.py  (+5 more)
(+235 files in other folders)
