[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jemma"
version = "0.1.0"
description = "Autonomous local Gemma agent framework with benchmark orchestration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Copilot" }]
dependencies = [
  "discord.py>=2.4,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
jemma = "jemma.cli:main"
jemma-api = "jemma.api.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

